# rss_rust_parser

./: .gitignore  Cargo.toml  readme.md  rss_rust.sqlite3
.github/workflows/: create.yml
src/: lib.rs  main.rs
src/core/: args.rs  mod.rs  structs.rs  traits.rs
src/db/: mod.rs
src/db/entities/: blog.rs  mod.rs  rss_entity.rs
src/rss/: dto.rs  errors.rs  mod.rs
